kubernetes/infrastructure/longhorn/s3-backup-secret.yaml
# this free oracle storage is funded in part thanks to Oracle having really crappy licensing agreements. Thanks Larry!

# very important: all AWS_* values must be encoded in base64 BEFORE stored as secret object - doco skips mentioning that
# run echo -n "value" | base64
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-s3-secret
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: s3-secret
  template:
    metadata:
      labels:
        name: s3-secret
    spec:
      volumes:
      - name: s3-secret
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-s3-secret
          nodePublishSecretRef:
            name: azure-secrets-store-cred
      containers:
      - name: azure-s3-secret
        image: busybox:1.35.0
        command:
          - "/bin/sleep"
          - "10000"
        volumeMounts:
        - name: s3-secret
          mountPath: /mnt/secrets-store
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
