kubernetes/infrastructure/longhorn/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx-internal
  rules:
  - host: mgmt.${DOMAIN_NAME}
    http:
      paths:
      - path: /longhorn(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - mgmt.${DOMAIN_NAME}
